# auralext-rag

./: .dockerignore  Dockerfile  README.md  compose.yaml  pyproject.toml
.github/workflows/: publish.yml
app/: main.py
app/core/: config.py
app/schemas/: openai_compat.py
app/services/internal/: chunk.py  embed.py  generate.py
tests/: test_openai_compat.py
