[project]
name = "auralext-rag"
version = "1.0.0"
description = "Auralext RAG: A powerful Retrieval-Augmented Generation (RAG) system for audio and text content."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.119.0",
    "uvicorn>=0.38.0",
    "sse-starlette>=3.3.2",
    "huggingface-hub[cli,hf-transfer]>=0.35.3",
    "langchain-community>=0.3.30",
    "langchain-core>=0.3.78",
    "langchain-google-genai>=4.2.1",
    "pydantic>=2.12.3",
    "python-dotenv>=1.1.1",
    "transformers>=4.57.1",
    "sentence-transformers>=5.1.2",
    "torch>=2.9.0",
    "yt-dlp>=2025.11.12",
    "protobuf>=6.33.1",
    "faster-whisper>=1.2.1",
    "pytest>=9.0.2",
    "langchain>=1.2.10",
    "pymilvus>=2.6.9",
    "redis>=7.2.1",
    "python-multipart>=0.0.22",
    "pytest-asyncio>=1.3.0",
    "pypdf>=6.7.4",
    "docx2txt>=0.9",
]


[tool.pytest]
testpaths = ["tests"]
